Annotation주고_Message 설정

--- a/src/main/resources/messages/message_en.properties
+++ b/src/main/resources/messages/message_en.properties
@@ -1,4 +1,10 @@
-# 영어 메세지
+## 영어 메세지
 hello=welcome
 board=board
 board.name=notice
+
+
+## Message 검증
+NotBlank=NO SPACE.
+# NotBlank에서 개별로 message 부여
+NotBlank.username=Required ID.
