--- a/src/main/resources/messages/message_ko.properties
+++ b/src/main/resources/messages/message_ko.properties
@@ -2,3 +2,9 @@
 hello=안녕하세요
 board=게시판
 board.name=공지사항
+
+
+## Message 검증
+NotBlank=비어있으면 안돼. 다 입력해
+# NotBlank에서 개별로 message 부여
+NotBlank.username=ID는 필수입니다.
