--- a/src/main/resources/messages/message_ko.properties
+++ b/src/main/resources/messages/message_ko.properties
@@ -4,7 +4,14 @@ board=게시판
 board.name=공지사항
 
 
-## Message 검증
+## Message 검증 : 검증Annotation명.VO명=message
 NotBlank=비어있으면 안돼. 다 입력해
 # NotBlank에서 개별로 message 부여
 NotBlank.username=ID는 필수입니다.
+NotBlank.memberVO.name=이름을 입력하세요.
+# Size에서 index {0}:멤버변수명, {1}:max, {2}:min
+Size.memberVO.username={0}는 {2} 이상 {1} 이하입니다.
+
+# MemberService의 getMemberError메서드에서 만든 키 : memberVO.password.equalCheck
+memberVO.password.equalCheck=비번이 일치하지 않아요.
+memberVO.username.equalCheck=이미 사용중인 아이디입니다.
