--- a/src/main/resources/messages/message_en.properties
+++ b/src/main/resources/messages/message_en.properties
@@ -14,3 +14,12 @@ Size.memberVO.username={0} is between {2} and {1}.
 # MemberService의 getMemberError메서드에서 만든 키 : memberVO.password.equalCheck
 memberVO.password.equalCheck=Password Not Equal.
 memberVO.username.equalCheck=Already user.
+
+
+### 로그인 실패 메세지
+login.fail.nouser=No Info User.
+login.fail.notpassword=Not Correct Password.
+
+### 로그인 환영 메세지
+# {0} : 멤버변수
+login.welcome=Welcome {0}!
