--- a/src/main/resources/messages/message_ko.properties
+++ b/src/main/resources/messages/message_ko.properties
@@ -15,3 +15,12 @@ Size.memberVO.username={0}는 {2} 이상 {1} 이하입니다.
 # MemberService의 getMemberError메서드에서 만든 키 : memberVO.password.equalCheck
 memberVO.password.equalCheck=비번이 일치하지 않아요.
 memberVO.username.equalCheck=이미 사용중인 아이디입니다.
+
+
+### 로그인 실패 메세지
+login.fail.nouser=회원정보가 없습니다.
+login.fail.notpassword=비밀번호를 확인하세요.
+
+### 로그인 환영 메세지
+# {0} : 멤버변수
+login.welcome={0} 환영합니다!
